# Financial-Time-Series-Forecasting-with-Deep-Learning-Models-and-Social-Media-Sentiment

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TSLA_price.csv  pyproject.toml  requirements.txt
checkpoints/: tft-epoch=06-train_loss=29.3581.ckpt  tft-epoch=08-train_loss=14.8300.ckpt  tft-epoch=10-train_loss=75.2421-v1.ckpt  tft-epoch=10-train_loss=75.2421.ckpt  tft-epoch=11-train_loss=23.4225.ckpt  tft-epoch=11-train_loss=80.0126-v1.ckpt  tft-epoch=11-train_loss=80.0126.ckpt  tft-epoch=12-train_loss=71.9513-v1.ckpt  tft-epoch=12-train_loss=71.9513.ckpt  tft-epoch=15-train_loss=8.2105.ckpt  tft-epoch=18-train_loss=10.2675.ckpt  tft-epoch=19-train_loss=5.3358.ckpt
data/interim/: BYND_price_full.csv  NVDA_price_full.csv  TSLA_price_full.csv  bynd_reddit_sentiment_daily.csv
data/processed/: AAPL_full_features.csv  NVDA_full_features.csv  NVDA_price_full.csv  TSLA_full_features.csv  TSLA_price_full.csv  bynd_price_sentiment_spike_merged.csv  nvda_combined_range.csv  nvda_combined_range.sql  nvda_combined_range_norm.csv  (+8 more)
docs/: mkdocs.yml  pipeline_overview.mmd
models/: __init__.py  __main__.py  activity_timing.py  arima copy.py  arima.py  arima_nvda.py  bynd_pipeline.py  chronos.py  chronos_nvda.py  deps.py  reddit_bynd_sentiment.py  reddit_nvda_sentiment.py  reddit_sentiment.py  sentiment_analysis.py  stock_data_extraction.py  tft_baseline.py  tft_baseline_nvda.py  tft_with_reddit_sentiment.py  tft_with_reddit_sentiment_nvda.py  timesfm.py  timesfm_nvda.py  utils_merge.py  wordcloud.py
notebooks/: 0_arima_baseline.ipynb  0_arima_baseline_nvda.ipynb  1_timesfm_baseline.ipynb  1_timesfm_baseline_nvda.ipynb  2_chronos_baseline.ipynb  2_chronos_baseline_nvda.ipynb  3_tft_baseline_runner.ipynb  3_tft_baseline_runner_nvda.ipynb  4_tft_with_reddit_sentiment_runner.ipynb  4_tft_with_reddit_sentiment_runner_nvda.ipynb  5_volume_normalization_experiment.ipynb  6_neutral_sentiment_ab_test.ipynb  DataCleaning.ipynb  Reddit_sentiment_extraction.ipynb  TSLA_execution_time.pkl  activity_timing_spike_detection.ipynb  reddit_tsla_sentiment_extraction.ipynb  sentiment_analysis.ipynb  stock_data_extraction.ipynb  test_range.ipynb  wordcloud_analysis.ipynb
results/: NVDA_execution_time.pkl  NVDA_execution_time_matrix.csv  NVDA_results_matrix.pkl  TSLA_execution_time.pkl  TSLA_execution_time_matrix.csv  TSLA_neutral_ab_results.csv  TSLA_neutral_ab_seeds_A_upvote.csv  TSLA_neutral_ab_seeds_B_finbert.csv  TSLA_neutral_ab_summary.csv  TSLA_results_matrix.pkl  plot_tft_improvement.py  result_matrix.csv  result_matrix_nvda.csv  result_matrix_tsla.csv  results_matrix_nvda.pkl  results_matrix_tsla.pkl  sentiment_benchmark_metrics.csv
(+141 files in other folders)
