[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "financial-forecasting"
version = "0.1.0"
description = "Financial Time Series Forecasting with Deep Learning Models and Social Media Sentiment"
authors = [
  { name = "Yejin Hwang", email = "yejin.hwang@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.12.0"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "torch>=1.12.0",
    "pytorch-forecasting==1.0.0",
    "lightning==2.0.9",
    "yfinance>=0.1.87",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "jupyter>=1.0.0",
    "loguru>=0.6.0",
    "typer>=0.7.0",
    "python-dotenv>=0.20.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.0",
    "pytest-cov>=3.0.0",
    "black>=22.6.0",
    "ruff>=0.1.0",
    "isort>=5.10.0",
]
sentiment = [
    "textblob>=0.17.1",
    "vaderSentiment>=3.3.2",
    "nltk>=3.7",
    "transformers>=4.21.0",
    "praw>=7.6.0",
]
viz = [
    "plotly>=5.10.0",
    "bokeh>=2.4.0",
]

[project.scripts]
train-tft = "src.models.train_tft:main"
predict-tft = "src.models.predict_tft:main"

[project.urls]
Homepage = "https://github.com/yejin-hwang/financial-forecasting"
Repository = "https://github.com/yejin-hwang/financial-forecasting"
Issues = "https://github.com/yejin-hwang/financial-forecasting/issues"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
extend-select = ["I", "E", "W", "F"]  # Add import sorting, error, warning, and pyflakes
ignore = ["E501"]  # Ignore line too long (handled by line-length)

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true

[tool.black]
line-length = 99
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"